--- a/View/Customer/ListCustomerUCView.xaml
+++ b/View/Customer/ListCustomerUCView.xaml
@@ -38,7 +38,7 @@
         </ListView>
         <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Width="138" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2" >
             <StackPanel Orientation="Horizontal" Width="135">
-                <Image Source="../../Ressource/add.png" Width="30" Height="30" />
+                <Image Source="/PrototypeEDUCOM;component/Ressource/add.png" Width="30" Height="30" />
                 <TextBlock Text="Ajouter un client" VerticalAlignment="Center" FontWeight="Bold" />
             </StackPanel>
         </Button>
