--- a/View/Customer/AddCustomerView.xaml
+++ b/View/Customer/AddCustomerView.xaml
@@ -38,7 +38,7 @@
                 <Label Content="Nom" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Column="2" Grid.Row="1" />
                 <ComboBox SelectedIndex="{Binding civilityIndex}" ItemsSource="{Binding civilities}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
                 <StackPanel Grid.Row="1" Grid.Column="1" >
-                    <TextBox Text="{Binding firstname}"  HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" >
+                    <TextBox Text="{Binding firstname, Mode=OneWayToSource}"  HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" >
                         <TextBox.Style>
                             <Style TargetType="{x:Type TextBox}">
                                 <Style.Triggers>
@@ -75,7 +75,7 @@
                 </StackPanel>
                 
                 <StackPanel Grid.Column="3" Grid.Row="1">
-                    <TextBox Text="{Binding lastname }" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2">
+                    <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2">
                         <TextBox.Style>
                             <Style TargetType="{x:Type TextBox}">
                                 <Style.Triggers>
