--- a/View/LoginView.xaml
+++ b/View/LoginView.xaml
@@ -10,7 +10,7 @@
 
         </Grid.RowDefinitions>
 
-        <Image Source="../Ressource/logo.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="100" Width="272" Grid.Row="0"/>
+        <Image Source="/PrototypeEDUCOM;component/Ressource/logo.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="100" Width="272" Grid.Row="0"/>
 
         <Grid Grid.Row="1">
             <Grid.Style>
@@ -44,7 +44,7 @@
                 <!-- Button submit -->
                 <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Margin="35" Command="{Binding btnLogin}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2"  >
                     <StackPanel Orientation="Horizontal">
-                        <Image Source="../Ressource/login.png" Width="30" Height="30" />
+                        <Image Source="/PrototypeEDUCOM;component/Ressource/login.png" Width="30" Height="30" />
                         <TextBlock Text="Connexion" VerticalAlignment="Center" Margin="6,0" FontWeight="Bold" />
                     </StackPanel>
                 </Button>
